projects/elements/src/icon/icon.css
:host {
  --color: var(--nve-sys-support-color);
  --width: var(--nve-ref-size-400);
  --height: var(--nve-ref-size-400);
  display: inline-flex;
  contain: layout;
  content-visibility: auto;
  contain-intrinsic-size: var(--width) var(--height);
}

[internal-host] {
  color: var(--color);
  width: var(--width);
  height: var(--height);
  place-self: center;
  display: flex;
  place-items: center;
}

svg {
  width: var(--width);
  height: var(--height);
}

:host([outline]) {
  outline: 1px dashed var(--color);
}

:host([size='xs']) {
  --width: var(--nve-ref-size-200);
  --height: var(--nve-ref-size-200);
}

:host([size='sm']) {
  --width: var(--nve-ref-size-300);
  --height: var(--nve-ref-size-300);
}

:host([size='lg']) {
  --width: var(--nve-ref-size-500);
  --height: var(--nve-ref-size-500);
}

:host([size='xl']) {
  --width: var(--nve-ref-size-600);
  --height: var(--nve-ref-size-600);
}

:host([name='arrow']),
:host([name='arrow-angle']),
:host([name='cancel']),
:host([name='caret']),
:host([name='chevron']),
:host([name='double-chevron']) {
  --width: var(--nve-ref-size-300);
  --height: var(--nve-ref-size-300);
}

:host([size='sm'][name='arrow']),
:host([size='sm'][name='arrow-angle']),
:host([size='sm'][name='cancel']),
:host([size='sm'][name='caret']),
:host([size='sm'][name='chevron']),
:host([size='sm'][name='double-chevron']) {
  --width: var(--nve-ref-size-200);
  --height: var(--nve-ref-size-200);
}

:host([size='lg'][name='arrow']),
:host([size='lg'][name='arrow-angle']),
:host([size='lg'][name='cancel']),
:host([size='lg'][name='caret']),
:host([size='lg'][name='chevron']),
:host([size='lg'][name='double-chevron']) {
  --width: var(--nve-ref-size-400);
  --height: var(--nve-ref-size-400);
}

:host([direction='up']) {
  transform: rotate(0deg);
}

:host([direction='down']) {
  transform: rotate(180deg);
}

:host([direction='left']) {
  transform: rotate(270deg);
}

:host([direction='right']) {
  transform: rotate(90deg);
}

:host([status='success']) {
  --color: var(--nve-sys-support-success-color);
}

:host([status='warning']) {
  --color: var(--nve-sys-support-warning-color);
}

:host([status='danger']) {
  --color: var(--nve-sys-support-danger-color);
}

:host([status='accent']) {
  --color: var(--nve-sys-support-accent-color);
}

/** @deprecated (left) 0.14.0 */
:host([name='chevron-left']),
:host([name='beginning']),
:host([name='collapse-panel']),
:host([name='navigate-back']) {
  transform: rotate(270deg);
}

/** @deprecated (right) 0.14.0 */
:host([name='chevron-right']),
:host([name='end']),
:host([name='expand-panel']),
:host([name='navigate-to']),
:host([name='carousel-horizontal']) {
  transform: rotate(90deg);
}

/** @deprecated (down) 0.14.0 */
:host([name='chevron-down']),
:host([name*='thumbs-down']) {
  transform: rotate(180deg);
}

